syntax = "proto3";

package com.sitewhere.grpc.kafka.model;

option java_outer_classname = "KafkaModel";

import "sitewhere-common.proto";
import "microservice-model.proto";

// ########################
// ### STATE MANAGEMENT ###
// ########################

// Lifecycle status.
enum GLifecycleStatus {
	LIFECYCLE_STATUS_INITIALIZING = 0;
	LIFECYCLE_STATUS_INITIALIZATION_ERROR = 1;
	LIFECYCLE_STATUS_STOPPED = 2;
	LIFECYCLE_STATUS_STOPPED_WITH_ERRORS = 3;
	LIFECYCLE_STATUS_STARTING = 4;
	LIFECYCLE_STATUS_STARTED = 5;
	LIFECYCLE_STATUS_STARTED_WITH_ERRORS = 6;
	LIFECYCLE_STATUS_PAUSING = 7;
	LIFECYCLE_STATUS_PAUSED = 8;
	LIFECYCLE_STATUS_STOPPING = 9;
	LIFECYCLE_STATUS_TERMINATING = 10;
	LIFECYCLE_STATUS_TERMINATED = 11;
	LIFECYCLE_STATUS_ERROR = 12;
}

// Lifecycle component state.
message GLifecycleComponentState {
	com.sitewhere.grpc.model.GUUID id = 1;
	string name = 2;
	GLifecycleStatus status = 3;
	repeated string errorFrames = 4;
	repeated GLifecycleComponentState childComponentStates = 5;
}

// Microservice state.
message GMicroserviceState {
	com.sitewhere.grpc.model.GMicroserviceDetails microservice = 1;
	GLifecycleStatus status = 2;
}

// Tenant engine state.
message GTenantEngineState {
	com.sitewhere.grpc.model.GMicroserviceDetails microservice = 1;
	com.sitewhere.grpc.model.GUUID tenantId = 2;
	GLifecycleComponentState state = 3;
}

// Wrapper for state update types.
message GStateUpdate {
	oneof state {
		GMicroserviceState microserviceState = 1;
		GTenantEngineState tenantEngineState = 2;
	}
}

// ###############
// ### LOGGING ###
// ###############

// Log levels.
enum GLogLevel {
	LOG_LEVEL_TRACE = 0;
	LOG_LEVEL_DEBUG = 1;
	LOG_LEVEL_INFO = 2;
	LOG_LEVEL_WARN = 3;
	LOG_LEVEL_ERROR = 4;
}

// Stack trace element.
message GLoggedStackTraceElement {
	string clazz = 1;
	string method = 2;
	string file = 3;
	uint64 lineNumber = 4;
}

// Exception information.
message GLoggedException {
	string messageText = 1;
	repeated GLoggedStackTraceElement elements = 2;
}

// Log message.
message GMicroserviceLogMessage {
	string microserviceIdentifier = 1;
	string microserviceContainerId = 2;
	com.sitewhere.grpc.model.GUUID tenantId = 3;
	uint64 timestamp = 4;
	GLogLevel level = 5;
	string messageText = 6;
	GLoggedException exception = 7;
}